translations adapted to the boostrap version

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <script src="https://kit.fontawesome.com/92d195fa75.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="container h-100 mx-0">
+<body>
+    <!-- <body class="container h-100 mx-0"> -->
+
     <div class="row h-100">
+
 
         <div class="col-md-2">
 
@@ -39,7 +42,7 @@
 
             </ul>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-1 g-0">
             <div class="cube-triangle">
                 <div id="circle">
                     <div class="feature">
@@ -62,98 +65,29 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-8 bg-danger">
-            Navbar?
+        <div class="col-md-9 bg-danger">
+            <header>
+                <nav>
+                    <ul>
+                        <li class="translate">Home</li>
+                        <li class="translate">Get my CV</li>
+                        <li class="translate">Contact me</li>
+                        <li>
+                            <ul>
+                                <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
+                                <li><img class="changeLanguage" data-language="Spanish" src="flagSpain.png"></li>
+                                <li><img class="changeLanguage" data-language="French" src="flagFrance.png"></li>
+
+                            </ul>
+                        </li>
+                    </ul>
+
+                </nav>
+            </header>
+
         </div>
 
     </div>
-
-
-    <!-- <header>
-        <nav>
-            <ul>
-                <li class="translate">Home</li>
-                <li class="translate">Get my CV</li>
-                <li class="translate">Contact me</li>
-                <li>
-                    <ul>
-                        <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
-                        <li><img class="changeLanguage" data-language="Spanish" src="flagSpain.png"></li>
-                        <li><img class="changeLanguage" data-language="French" src="flagFrance.png"></li>
-
-                    </ul>
-                </li>
-            </ul>
-
-        </nav>
-    </header>
-    <main>
-        <section id="textPrincipal">
-            <article id="base">
-                <p>Hi there! My name is Jessica Villar; I am a restless curious mind. </p>
-                <p> I am a venezuelan-spanish and in the 2019 I moved to France!</p>
-                <p> My carreer started as journalist, but when I changed country I also decided to change professional
-                    path and become a programmer. Right now I am studying to get my certificate of web developper and
-                    looking for a
-                    internship (stage) in Lyon or close to this wonderful city.</p>
-            </article>
-        </section>
-        <ul class="controls">
-            <div>
-                <li>
-                    <img src="arrow.png" id="upBtn">
-                </li>
-                <li id="about">
-                    <h3 class="translate">About me</h3>
-
-                </li>
-                <li id="projects">
-                    <h3 class="translate">Projects</h3>
-                </li>
-                <li id="education">
-                    <h3 class="translate">Education</h3>
-                </li>
-                <li id="skills">
-                    <h3 class="translate">Skills</h3>
-                </li>
-                <li>
-                    <img src="arrow.png" id="downBtn">
-                </li>
-            </div>
-        </ul>
-        <div class="hidder_container">
-            <div class="hidder">
-                <div id="circle">
-                    <div class="feature one">
-                        <img src="imgAbout.svg" class="imgIcon imgAbout">
-
-                        <h2 class="translate">About Me</h2>
-
-                    </div>
-                    <div class="feature two">
-                        <img src="imgProjects.svg" class="imgIcon imgProjects">
-
-                        <h2 class="translate">Projects</h2>
-
-                    </div>
-                    <div class="feature three">
-                        <img src="imgEducation.svg" class="imgIcon">
-
-                        <h2 class="translate">Education</h2>
-
-                    </div>
-                    <div class="feature four">
-                        <img src="imgSkills.svg" class="imgIcon">
-
-                        <h2 class="translate">Skills</h2>
-
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
-
-    <!-- </main> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
