--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="feature">
                         <img src="imgAbout.svg" class="imgIcon" id="imgAbout">
                     </div>
-                    <h2 class="translate">About Me</h2>
+                    <h2 class="translate one">About Me</h2>
                     <div class="feature two">
                         <img src="imgProjects.svg" class="imgIcon" id="imgProjects">
                         <h2 class="translate">Projects</h2>
@@ -60,30 +60,29 @@
                     </div>
                     <div class="feature four">
                         <img src="imgSkills.svg" class="imgIcon" id="imgSkills">
-                        <h2 class="translate">Skills</h2>
+                        <h2 class="translate" id="skillH">Skills</h2>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-md-9 bg-danger">
-            <header>
-                <nav>
-                    <ul>
-                        <li class="translate">Home</li>
-                        <li class="translate">Get my CV</li>
-                        <li class="translate">Contact me</li>
-                        <li>
-                            <ul>
-                                <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
-                                <li><img class="changeLanguage" data-language="Spanish" src="flagSpain.png"></li>
-                                <li><img class="changeLanguage" data-language="French" src="flagFrance.png"></li>
+            <nav>
+                <ul>
+                    <li class="translate">Home</li>
+                    <li class="translate">Get my CV</li>
+                    <li class="translate">Contact me</li>
+                    <li>
+                        <ul>
+                            <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
+                            <li><img class="changeLanguage" data-language="Spanish" src="flagSpain.png"></li>
+                            <li><img class="changeLanguage" data-language="French" src="flagFrance.png"></li>
 
-                            </ul>
-                        </li>
-                    </ul>
+                        </ul>
+                    </li>
+                </ul>
 
-                </nav>
-            </header>
+            </nav>
+
 
         </div>
 
