--- a/index.html
+++ b/index.html
@@ -80,13 +80,26 @@
                         </ul>
                     </li>
                 </ul>
-
             </nav>
-
-
+            <section id="textPrincipal">
+                <article id="base">
+                    <p>Hi there! My name is Jessica Villar; I am a restless curious mind. </p>
+                    <p> I am a venezuelan-spanish and in the 2019 I moved to France!</p>
+                    <p> My carreer started as journalist, but when I changed country I also decided to change
+                        professional
+                        path and become a programmer. Right now I am studying to get my certificate of web
+                        developper
+                        and
+                        looking for a
+                        internship (stage) in Lyon or close to this wonderful city.</p>
+                </article>
+            </section>
         </div>
+    </div>
+
 
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
