--- a/education.html
+++ b/education.html
@@ -1,22 +1,31 @@
 <article id="educationInfo">
-    <p class="educationTitle"> <span class="educatioDate">2020-2021</span> Développement web et Web Mobile</p>
-    <p class="educationLocation"> Human Booster, Lyon, France</p>
+    <p>
+        <span class="educatioDate">2020-2021</span>
+        <span class="educationTitle">Développement web et Web Mobile.</span>
+        <span class="educationLocation">Human Booster, Lyon, France</span>
+    </p>
+    <p>
+        <span class="educatioDate"> 2020</span>
+        <span class="educationTitle"> Hackeuses - Culture et techniques du numérique. </span>
+        <span class="educationLocation">Simplon, Lyon, France</span>
+    </p>
+    <p>
+        <span class="educatioDate">2018</span>
+        <span class="educationTitle"> Atelier : SEO de base, optimisation pour
+            les moteurs de recherche. </span>
+        <span class="educationLocation">Université Central de Venezuela, Caracas, Venezuela </span>
+    </p>
+    <p>
+        <span class="educatioDate">2015–2016</span>
+        <span class="educationTitle"> Master en Marketing, Conseil et Communication Politique. </span>
+        <span class="educationLocation">Université de Saint Jacques de Compostelle, Saint Jacques de
+            Compostelle, Espagne</span>
+    </p>
 
-    <p class="educationTitle"> <span class="educatioDate"> 2020</span> Hackeuses - Culture et techniques du
-        numérique </p>
-    <p class="educationLocation">Simplon, Lyon, France</p>
-
-    <p class="educationTitle"> <span class="educatioDate"> 2018</span> Atelier : SEO de base, optimisation pour
-        les moteurs de recherche</p>
-    <p class="educationLocation">Université Central de Venezuela, Caracas, Venezuela </p>
-
-    <p class="educationTitle"> <span class="educatioDate">2015–2016</span> Master en Marketing, Conseil et
-        Communication Politique</p>
-    <p class="educationLocation">Université de Saint Jacques de Compostelle, Saint Jacques de
-        Compostelle, Espagne</p>
-
-    <p class="educationTitle"> <span class="educatioDate">2010–2015</span> Licence en Communication Sociale </p>
-    <p class="educationLocation">Université Central du Venezuela, Caracas,
-        Venezuela
+    <p>
+        <span class="educatioDate">2010–2015</span>
+        <span class="educationTitle">Licence en Communication Sociale. </span>
+        <span class="educationLocation">Université Central du Venezuela, Caracas,
+            Venezuela </span>
     </p>
 </article>
