skills with more style

--- a/skills.html
+++ b/skills.html
@@ -1,17 +1,11 @@
 <article id="skillsInfo">
     <ul>
+        <li>Technical Skills</li>
         <li>HTML, CSS, Bootstrap</li>
         <li>JavaScritpt (JQuery)</li>
         <li>Python (Flask, django)</li>
         <li>Databases</li>
         <li>Git</li>
-        <li>Management of social networks
-        </li>
-        <li>Writing skills and information
-            processing</li>
-    </ul>
-    <ul>
-        <li>Learning</li>
         <li>Angular</li>
         <li>PHP, Symfony
         </li>
@@ -19,9 +13,16 @@
         </li>
     </ul>
     <ul>
+        <li> Communication skills and others</li>
+        <li>Management of social networks</li>
+        <li>Information processing</li>
+        <li>General writing</li>
+        <li>Creative writing</li>
+    </ul>
+    <ul>
         <li> Languages</li>
         <li>Spanish Native</li>
-        <li>English Fluent</li>
+        <li>English Fluent </li>
         <li>French Intermediate</li>
     </ul>
 </article>
