--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+
     <!-- <body class="container h-100 mx-0"> -->
 
     <div class="row h-100">
@@ -65,7 +67,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-9 bg-danger">
+        <div class="col-md-9">
             <nav>
                 <ul>
                     <li class="translate">Home</li>
@@ -82,7 +84,9 @@
                 </ul>
             </nav>
             <section id="textPrincipal">
+
                 <article id="base">
+
                     <p>Hi there! My name is Jessica Villar; I am a restless curious mind. </p>
                     <p> I am a venezuelan-spanish and in the 2019 I moved to France!</p>
                     <p> My carreer started as journalist, but when I changed country I also decided to change
