translating education files

--- a/education.html
+++ b/education.html
@@ -1,31 +1,29 @@
 <article id="educationInfo">
     <p>
         <span class="educatioDate">2020-2021</span>
-        <span class="educationTitle">Développement web et Web Mobile.</span>
+        <span class="educationTitle">Web and Mobile Web Development.</span>
         <span class="educationLocation">Human Booster, Lyon, France</span>
     </p>
     <p>
         <span class="educatioDate"> 2020</span>
-        <span class="educationTitle"> Hackeuses - Culture et techniques du numérique. </span>
+        <span class="educationTitle"> Hackeuses - Digital culture and techniques. </span>
         <span class="educationLocation">Simplon, Lyon, France</span>
     </p>
     <p>
         <span class="educatioDate">2018</span>
-        <span class="educationTitle"> Atelier : SEO de base, optimisation pour
-            les moteurs de recherche. </span>
-        <span class="educationLocation">Université Central de Venezuela, Caracas, Venezuela </span>
+        <span class="educationTitle"> Workshop: Fundamental SEO. </span>
+        <span class="educationLocation">Central University of Venezuela, Caracas, Venezuela </span>
     </p>
     <p>
         <span class="educatioDate">2015–2016</span>
-        <span class="educationTitle"> Master en Marketing, Conseil et Communication Politique. </span>
-        <span class="educationLocation">Université de Saint Jacques de Compostelle, Saint Jacques de
-            Compostelle, Espagne</span>
+        <span class="educationTitle"> Master in Marketing, Consulting and Political Communication. </span>
+        <span class="educationLocation">University of Santiago de Compostela, Santiago de
+            Compostela, Spain</span>
     </p>
 
     <p>
         <span class="educatioDate">2010–2015</span>
-        <span class="educationTitle">Licence en Communication Sociale. </span>
-        <span class="educationLocation">Université Central du Venezuela, Caracas,
-            Venezuela </span>
+        <span class="educationTitle">Bachelor's degree in Communication.</span>
+        <span class="educationLocation">Central University of Venezuela, Caracas, Venezuela </span>
     </p>
 </article>
