--- a/skills.html
+++ b/skills.html
@@ -2,20 +2,18 @@
     <ul>
         <li>Technical Skills</li>
         <li>HTML, CSS, Bootstrap</li>
-        <li>JavaScritpt (JQuery)</li>
-        <li>Python (Flask, django)</li>
+        <li>JavaScritpt</li>
+        <li>Angular</li>
+        <li>PHP</li>
+        <li>Symfony</li>
+        <li>Python (Flask)</li>
         <li>Databases</li>
         <li>Git</li>
-        <li>Angular</li>
-        <li>PHP, Symfony
-        </li>
-        <li>Server deployment
-        </li>
     </ul>
     <ul>
         <li> Communication skills and others</li>
-        <li>Management of social networks</li>
-        <li>Information processing</li>
+        <li>Community Manager</li>
+        <li>SEO and marketing</li>
         <li>General writing</li>
         <li>Creative writing</li>
     </ul>
