--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>bootstrap-version</title>
+    <title>Jessica Villar - web
+        developper and communication</title>
     <script src="https://kit.fontawesome.com/92d195fa75.js" crossorigin="anonymous"></script>
 </head>
 
@@ -70,9 +71,9 @@
         <div class="col-md-9">
             <nav>
                 <ul>
-                    <li class="translate">Home</li>
-                    <li class="translate">Get my CV</li>
-                    <li class="translate">Contact me</li>
+                    <li class="translate"><a href="index.html">Home</a></li>
+                    <li class="translate"><a href="cv.html">Get my CV</a></li>
+                    <li class="translate"><a href="contact.html">Contact me</a></li>
                     <li>
                         <ul>
                             <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
