style for index

--- a/about.html
+++ b/about.html
@@ -1,7 +1,10 @@
-<article id="base">
-    <p>Hi there! I am Jessica Villar a restless curious mind. </p>
-    <p> I am venezuela-spanish and in the 2019 I moved to France!</p>
-    <p> I am journalist, but when I changed country I also decide to change proffesional path and become
-        a programmer. Right now i am studing to get my certificate of web developper and looking for a stage
-        in Lyon or close to this wonderful city.</p>
+<article id="base" class="d-flex flex-column align-items-center">
+
+    <p>Hi there! My name is Jessica Villar; I am a restless curious mind. </p>
+    <p> I am a venezuelan-spanish and in the 2019 I moved to France!</p>
+    <p> My carreer started workin in communications (journalism, marketing, community manager...), but when I changed country I also decided to change
+        professional path and become a programmer. I already got my certificate on web
+        developper and I am
+        looking for a
+        job in Lyon, Villeurbanne or in remote.</p>
 </article>
