--- a/index.html
+++ b/index.html
@@ -86,17 +86,15 @@
             </nav>
             <section id="textPrincipal">
 
-                <article id="base">
+                <article id="base" class="d-flex flex-column align-items-center">
 
                     <p>Hi there! My name is Jessica Villar; I am a restless curious mind. </p>
                     <p> I am a venezuelan-spanish and in the 2019 I moved to France!</p>
-                    <p> My carreer started as journalist, but when I changed country I also decided to change
-                        professional
-                        path and become a programmer. Right now I am studying to get my certificate of web
-                        developper
-                        and
+                    <p> My carreer started workin in communications (journalism, marketing, community manager...), but when I changed country I also decided to change
+                        professional path and become a programmer. I already got my certificate on web
+                        developper and I am
                         looking for a
-                        internship (stage) in Lyon or close to this wonderful city.</p>
+                        job in Lyon, Villeurbanne or in remote.</p>
                 </article>
             </section>
         </div>
