translations and typos correction

--- a/aboutFrench.html
+++ b/aboutFrench.html
@@ -1,7 +1,7 @@
-<article id="base">
+<article id="base" class="d-flex flex-column align-items-center">
     <p>Bonjour, je m'appelle Jessica Villar, je suis un esprit inquisiteur et curieux. </p>
-    <p> Je suis né au Venezuela et en 2019 j'ai déménagé en France</p>
-    <p> Ma carrière a commencé par le journalisme, mais lorsque j'ai déménagé dans un autre pays, j'ai également décidé
-        de changer de voie professionnelle et de devenir programmatrice. En ce moment, j'étudie pour obtenir mon
-        certificat de développeuse web et je cherche un stage à Lyon ou près de cette merveilleuse ville.</p>
+    <p> Je suis né au Venezuela et en 2019 j'ai déménagé en France !</p>
+    <p> J'ai commencé ma carrière dans la communication (journalisme, marketing, community manager...), mais lorsque j'ai changé de pays,
+        j'ai également décidé devenir programmeuse. J'ai déjà obtenu mon certificat de développeur web et je recherche un un emploi à Lyon, 
+        Villeurbanne ou travailler à distance.</p>
 </article>
