--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 
     <p>Hi there! My name is Jessica Villar; I am a restless curious mind. </p>
     <p> I am a venezuelan-spanish and in the 2019 I moved to France!</p>
-    <p> My carreer started workin in communications (journalism, marketing, community manager...), but when I changed country I also decided to change
+    <p> My carreer started working in communications (journalism, marketing, community manager...), but when I changed country I also decided to change
         professional path and become a programmer. I already got my certificate on web
         developper and I am
         looking for a
