--- a/aboutSpanish.html
+++ b/aboutSpanish.html
@@ -1,8 +1,7 @@
-<article id="base">
+<article id="base" class="d-flex flex-column align-items-center">
     <p>Hola. Me llamo Jessica Villar; soy una mente inquieta y curiosa. </p>
-    <p> Naci en Venezuela y en el 2019 me mudé a Francia</p>
-    <p> Mi carrera comenzó con el periodismo, pero cuando cambié de país también decidí cambiar de camino
-        profesional y convertirme en programadora. Ahora mismo estoy estudiando para obtener mi certificado
-        de desarrolladora web y
-        buscando una prácticas (stage) en Lyon o cerca de esta maravillosa ciudad.</p>
+    <p> Naci en Venezuela y en el 2019 me mudé a Francia.</p>
+    <p> Empecé mi carrera en comunicación (periodismo, marketing, community manager...), pero cuando cambié de país, también decidí
+        convertirme en programadora. Ya he obtenido mi certificado en desarrollador web y estoy buscando un trabajo en Lyon, 
+        Villeurbanne o trabajar a distancia.</p>
 </article>
