--- a/cv.html
+++ b/cv.html
@@ -27,8 +27,9 @@
             </li>
         </ul>
     </nav>
-    <button><a href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">Télécharger mon cv en français</a></button>
-    <button><a href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">Télécharger mon cv en français</a></button>
-    <button><a href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">Télécharger mon cv en français</a></button>
+    <div class="triangle-up d-flex">
+        <a class="centerTest" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">Télécharger mon cv en français</a>
+    </div>
+    
 </body>
 </html>    
