--- a/cv.html
+++ b/cv.html
@@ -27,9 +27,45 @@
             </li>
         </ul>
     </nav>
-    <div class="triangle-up d-flex">
-        <a class="centerTest" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">Télécharger mon cv en français</a>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="triangle-right">
+                <a class="centerTextRight" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">
+                    Télécharger mon cv en français
+                </a>
+            </div>
+        </div>
+        <div class="col">
+            <div class="triangle-right">
+                <a class="centerTextRight" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">
+                    Télécharger mon cv en français
+                </a>
+            </div>
+        </div>
+        <div class="col">
+            <div class="triangle-right">
+                <a class="centerTextRight" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">
+                    Télécharger mon cv en français
+                </a>
+            </div>
+        </div>
     </div>
+</div>
+
+
+<!--     
+    <div class="d-flex bg-danger">
+        <div class="triangle-up d-flex">
+            <a class="centerTextUp" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">Télécharger mon cv
+                en français</a>
+        </div>
+        <div class="triangle-right d-flex justify-content-center">
+                <a class="centerTextRight"  href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">Download my
+                    resume in english</a>
+            </div>
+        </div>
+    </div> -->
     
 </body>
 </html>    
