text in triangles its not crush

--- a/cv.html
+++ b/cv.html
@@ -39,14 +39,14 @@
         <div class="col">
             <div class="triangle-right">
                 <a class="centerTextRight" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">
-                    Télécharger mon cv en français
+                    Download my resume in english
                 </a>
             </div>
         </div>
         <div class="col">
             <div class="triangle-right">
                 <a class="centerTextRight" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">
-                    Télécharger mon cv en français
+                    Descargar mi cv en español
                 </a>
             </div>
         </div>
