more style to cv

--- a/cv.html
+++ b/cv.html
@@ -28,13 +28,15 @@
         </ul>
     </nav>
 <div class="container">
-    <div class="row">
+    <div class="row cvMarginTop">
         <div class="col">
+            
             <div class="triangle-right">
                 <a class="centerTextRight" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">
                     Télécharger mon cv en français
                 </a>
             </div>
+        
         </div>
         <div class="col">
             <div class="triangle-right">
