--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <div class="col-md-9">
             <nav>
                 <ul>
-                    <li class="translate"><a href="index.html">Home</a></li>
-                    <li class="translate"><a href="cv.html">Get my CV</a></li>
-                    <li class="translate"><a href="contact.html">Contact me</a></li>
+                    <li><a href="index.html" class="translate">Home</a></li>
+                    <li><a href="cv.html" class="translate">Get my CV</a></li>
+                    <li><a href="contact.html" class="translate">Contact me</a></li>
                     <li>
                         <ul>
                             <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
