linkedin img almost ready (cv section)

--- a/cv.html
+++ b/cv.html
@@ -14,9 +14,9 @@
 <body>
     <nav>
         <ul>
-            <li class="translate"><a href="index.html">Home</a></li>
-            <li class="translate"><a href="cv.html">Get my CV</a></li>
-            <li class="translate"><a href="contact.html">Contact me</a></li>
+            <li><a class="translate" href="index.html">Home</a></li>
+            <li><a class="translate" href="cv.html">Get my CV</a></li>
+            <li><a class="translate" href="contact.html">Contact me</a></li>
             <li>
                 <ul>
                     <li><img class="changeLanguage" data-language="" src="flagUK.png"></li>
@@ -28,6 +28,7 @@
         </ul>
     </nav>
 <div class="container">
+    
     <div class="row cvMarginTop">
         <!-- <div class="col">
             <img class="flagCv" src="spain.png">
@@ -38,14 +39,14 @@
         </div> -->
         <div class="col t">
             <div class="triangle-right">
-                <a class="centerTextRight" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">
+                <a class="centerTextRight" href="VILLAR_Jessica_CV_EN.pdf" download="VILLAR_Jessica_CV_FR.pdf">
                     Download my resume in english
                 </a>
             </div>
         </div>
         <div class="col ts">
             <div class="triangle-right">
-                <a class="centerTextRight" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">
+                <a class="centerTextRight" href="VILLAR_Jessica_CV_ES.pdf" download="VILLAR_Jessica_CV_FR.pdf">
                     Descarga mi CV en español
                 </a>
             </div>
@@ -58,9 +59,13 @@
             </div>
         </div>
     </div>
+    <div class="row d-flex justify-content-center text-center">
+        <div><a href="https://www.linkedin.com/in/jessica-villar-fuentes/?locale=en_US" class="bg-dark">Linkedin</a></div>
+        <img src="imgDetective.svg" class="imgIcon imgDetective">
+    </div>
 </div>
 
 
- 
+    <script src="script.js"></script>
 </body>
 </html>    
