--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
     </nav>
 <div class="container">
     
-    <div class="row cvMarginTop">
+    <div class="row cvMargins">
         <!-- <div class="col">
             <img class="flagCv" src="spain.png">
             <div class="textInFlag">
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-    <div class="row d-flex justify-content-center text-center">
+    <div class="row d-flex justify-content-center text-center mt-5">
         <div><a href="https://www.linkedin.com/in/jessica-villar-fuentes/?locale=en_US" class="bg-dark">Linkedin</a></div>
         <img src="imgDetective.svg" class="imgIcon imgDetective">
     </div>
