renaming and cleaning (cv section)

--- a/cv.html
+++ b/cv.html
@@ -37,21 +37,21 @@
                 Descarga mi CV en español</a>
             </div> 
         </div> -->
-        <div class="col t">
+        <div class="col colEnglish">
             <div class="triangle-right">
                 <a class="centerTextRight" href="VILLAR_Jessica_CV_EN.pdf" download="VILLAR_Jessica_CV_FR.pdf">
                     Download my resume in english
                 </a>
             </div>
         </div>
-        <div class="col ts">
+        <div class="col colSpanish">
             <div class="triangle-right">
                 <a class="centerTextRight" href="VILLAR_Jessica_CV_ES.pdf" download="VILLAR_Jessica_CV_FR.pdf">
                     Descarga mi CV en español
                 </a>
             </div>
         </div>
-        <div class="col tf">
+        <div class="col colFrench">
             <div class="triangle-right">
                 <a class="centerTextRight" href="VILLAR_Jessica_CV_FR.pdf" download="VILLAR_Jessica_CV_FR.pdf">
                     Telecharger le cv en français
