cv section - linkedin ready (v1)

--- a/cv.html
+++ b/cv.html
@@ -59,8 +59,8 @@
             </div>
         </div>
     </div>
-    <div class="row d-flex justify-content-center text-center mt-5">
-        <div><a href="https://www.linkedin.com/in/jessica-villar-fuentes/?locale=en_US" class="bg-dark">Linkedin</a></div>
+    <div class="row d-flex justify-content-center text-center mt-5 linkedin">
+        <div><a href="https://www.linkedin.com/in/jessica-villar-fuentes/?locale=en_US"  target="_blank" style="color: white;">Linkedin</a></div>
         <img src="imgDetective.svg" class="imgIcon imgDetective">
     </div>
 </div>
