--- a/contact.html
+++ b/contact.html
@@ -27,5 +27,20 @@
             </li>
         </ul>
     </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                
+                <div class="border border-white align-middle t">
+                    <img src="imgContact.svg" id="imgContact">
+                    <div class="contactInfo"> 
+                        <p><i class="fas fa-phone"></i>:+33 7 85 07 22 00</p>
+                        <p><i class="far fa-envelope"></i> villarjessica@hotmail.com</p>
+                        <p><i class="fab fa-twitter"></i> <a href="https://twitter.com/VillarJessica" style="color: white;"> @villarJessica</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </html>    
