cv update and translation works in cv and contact section

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col text-center">
                 
-                <div class="border border-white align-middle t">
+                <div class="border border-white align-middle divContact">
                     <img src="imgContact.svg" id="imgContact">
                     <div class="contactInfo"> 
                         <p><i class="fas fa-phone"></i>:+33 7 85 07 22 00</p>
@@ -42,5 +42,7 @@
             </div>
         </div>
     </div>
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="translation.js"></script>
+</body>   
 </html>    
