--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,6 @@
         </ul>
     </nav>
 <div class="container">
-    
     <div class="row cvMargins">
         <!-- <div class="col">
             <img class="flagCv" src="spain.png">
@@ -65,7 +64,8 @@
     </div>
 </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="translation.js"></script>
 
-    <script src="script.js"></script>
 </body>
 </html>    
