--- a/projectsSpanish.html
+++ b/projectsSpanish.html
@@ -1,5 +1,5 @@
 <article id="projectsInfo">
-    <h2>Check my projects in <a href="https://github.com/JessicaVF?tab=repositories" target="_blank">Github</a></h2>
+    <h2>Todos mis proyectos están disponibles en <a href="https://github.com/JessicaVF?tab=repositories" target="_blank">Github</a></h2>
     <a href="https://github.com/JessicaVF?tab=repositories" target="_blank"><img src="imgGithub.png" style="width: 50%;"></a>
     <!-- <h2> We are working here, come back later please</h2>
     <img src="https://cdn.pixabay.com/photo/2015/12/07/10/58/architect-1080592_960_720.jpg"> -->
